--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>2048</title>
-  <style>
-    html, body {
-      width: 100%;
-      height: 100%;
-      padding: 0;
-      margin: 0;
-      overflow: hidden;
-    }
-    #container {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-    }
-    #container canvas:nth-child(1) {
-      background-color: #F2F2DA;
-    }
-  </style>
-</head>
-<body>
-  <div id="container"></div>
-  <script src="js/app.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <title>2048</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="text/javascript" src="./js/app.js"></script>
+  </body>
 </html>
